feat(接口测试): 获取协议列表接口实现